This is my final change

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>About Sukhman</h1>
+        <img src="C:\Users\brars\OneDrive\Desktop\USA VISA\download (1).jpeg" alt="Profile Picture" class="profile-pic">
     </header>
     <main>
         <section class="intro">
