--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         <img src="C:\Users\brars\OneDrive\Desktop\USA VISA\download (1).jpeg" alt="Profile Picture" class="profile-pic">
     </header>
     <main>
+        
         <section class="intro">
-            <h2>Hello!</h2>
+            <h2>Hello!<hr><hr></h2> <!--add <hr> tag-->
             <p>Hi, I'm Sukhman!</p>
         </section>
         <section class="interests">
@@ -30,6 +31,7 @@
             <h2>Get in Touch</h2>
             <p>I'm always looking for new book recommendations and artists to add to my playlist!</p>
         </section>
+        
     </main>
 </body>
 </html>
