--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>About Sukhman</h1>
-        <img src="C:\Users\brars\OneDrive\Desktop\USA VISA\download (1).jpeg" alt="Profile Picture" class="profile-pic">
+        <Figure><img src="sukh.jpg"></Figure>
     </header>
     <main>
         
