--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Sukhman</title>
+    <title>About Kinjal</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
         
         <section class="intro">
             <h2>Hello!<hr><hr></h2> <!--add <hr> tag-->
-            <p>Hi, I'm Sukhman!</p>
+            <p>Hi, I'm Kinjal!</p>
         </section>
         <section class="interests">
             <h2>My Passions</h2>
