--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>About Sukhman</h1>
+        <h1>About Kinjal</h1>
         <Figure><img src="sukh.jpg"></Figure>
     </header>
     <main>
@@ -21,6 +21,7 @@
             <h2>My Passions</h2>
             <p>In my free time, I love getting lost in the pages of a good book, exploring different genres and authors.</p>
             <p>Music is another passion of mine, and I enjoy listening to various tunes that uplift and inspire me.</p>
+            <p>I love to help people and I am a peoples person.</p>
         </section>
         <section class="reflection">
             <h2>My Escape</h2>
