--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </section>
         <section class="interests">
             <h2>My Passions</h2>
-            <p>In my free time, I love getting lost in the pages of a good book, exploring different genres and authors.</p>
+            <p> <i> <b>In my free time, I love getting lost in the pages of a good book, exploring different genres and authors. </i></b> </p>
             <p>Music is another passion of mine, and I enjoy listening to various tunes that uplift and inspire me.</p>
             <p>I love to help people and I am a peoples person.</p>
         </section>
